package com.headless.ecommerce.model.enums;

/**
 * Product status enumeration.
 */
public enum ProductStatus {
    ON_SHELF,
    OFF_SHELF
}
