package com.headless.ecommerce.model.enums;

/**
 * User role enumeration.
 */
public enum UserRole {
    ADMIN,
    BUYER
}
